WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45613
[Qt] Fix http/tests/navigation/reload-subframe-object.html
https://bugs.webkit.org/show_bug.cgi?id=45613
Summary
[Qt] Fix http/tests/navigation/reload-subframe-object.html
Robert Hogan
Reported
2010-09-12 04:44:39 PDT
We need to bring our use of getMimeTypeForPath() and getMimeTypeForExtension() into line with other ports and WebCore expectations.
Attachments
Patch
(3.88 KB, patch)
2010-09-12 05:24 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2010-09-12 05:24:58 PDT
Created
attachment 67335
[details]
Patch
Andreas Kling
Comment 2
2010-09-12 11:51:34 PDT
Comment on
attachment 67335
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2010-09-12 17:20:09 PDT
Comment on
attachment 67335
[details]
Patch Clearing flags on attachment: 67335 Committed
r67355
: <
http://trac.webkit.org/changeset/67355
>
WebKit Commit Bot
Comment 4
2010-09-12 17:20:13 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 5
2011-01-26 12:59:58 PST
Revision
r67355
cherry-picked into qtwebkit-2.1.x with commit 1f0a7be <
http://gitorious.org/webkit/qtwebkit/commit/1f0a7be
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug